--- a/Anime/charts/templates/pie.html
+++ b/Anime/charts/templates/pie.html
@@ -1,2 +1,13 @@
-this os some fineshit 
-<h1>yoyoy</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>django-pygal</title>
+</head>
+<body>
+  {{ cht|safe }}
+  <script type="text/javascript" src="http://kozea.github.com/pygal.js/latest/pygal-tooltips.min.js"></script>  
+</body>
+</html>
